# comicw-ics

./: README.md  pyproject.toml  save.py  server.py  toolkit.py
.github/workflows/: ics.yml  static.yml
output/: comicw.db  comicw.ics
